@@ -1,3 +1,5 @@
+- Improvement: Add type getter/setter to BibliographicReference
+
 30.3.0 (08-05-2020)
 - Improvement: AdministrativeOffice coordinator not mandatory
 - Fix: Bootstrap countries with english names
